fixed issues for user service. refactored application.yaml to api.yml for all the services removed redundant objects under all domain packages updated entity objects by adding @ Column annotation, column names and entity names implemented Jpa specification for all services
